# parallel_net

./: .gitignore  Cargo.toml  build.sh
bindings/kotlin/ParallelNet/: .gitignore  settings.gradle
bindings/kotlin/ParallelNet/app/: build.gradle
bindings/kotlin/ParallelNet/app/src/androidTest/java/com/parallelnet/android/: ExampleInstrumentedTest.kt
bindings/kotlin/ParallelNet/app/src/main/: AndroidManifest.xml
bindings/kotlin/ParallelNet/app/src/main/java/com/parallelnet/android/: DemoFragment.kt  MainActivity.kt  ParallelRequestFragment.kt
bindings/kotlin/ParallelNet/app/src/main/java/com/parallelnet/android/net/: BaseApi.kt  IpApi.kt  IpResp.kt
bindings/kotlin/ParallelNet/app/src/main/res/layout/: activity_main.xml  fragment_first.xml  fragment_second.xml
bindings/kotlin/ParallelNet/app/src/main/res/menu/: menu_main.xml
bindings/kotlin/ParallelNet/app/src/main/res/navigation/: nav_graph.xml
bindings/kotlin/ParallelNet/app/src/main/res/values/: strings.xml  themes.xml
bindings/kotlin/ParallelNet/app/src/main/res/values-night/: themes.xml
bindings/kotlin/ParallelNet/app/src/test/java/com/parallelnet/android/: ExampleUnitTest.kt
bindings/kotlin/ParallelNet/gradle/wrapper/: gradle-wrapper.properties
bindings/kotlin/ParallelNet/parallelnet/: build.gradle
bindings/kotlin/ParallelNet/parallelnet/src/androidTest/java/com/parallelnet/android/: ExampleInstrumentedTest.kt
bindings/kotlin/ParallelNet/parallelnet/src/main/: AndroidManifest.xml
bindings/kotlin/ParallelNet/parallelnet/src/main/java/com/parallelnet/android/: ParallelCall.kt  ParallelCallFactory.kt  ParallelEngine.kt
bindings/kotlin/ParallelNet/parallelnet/src/main/rust/: Cargo.toml  build.sh
bindings/kotlin/ParallelNet/parallelnet/src/main/rust/src/: lib.rs
local/: cargo-config.toml
src/: engine.rs  lib.rs
