[package]
name = "parallel"
version = "0.1.0"
authors = ["smallSohoSolo <chenlongbo@kuaishou.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.10.2", default-features = false }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[lib]
name = "parallelnet"
crate-type = ["cdylib"]
