[package]
name = "parallel_net"
version = "0.0.1"
authors = ["smallSohoSolo <chenlongbo@kuaishou.com>"]
edition = "2018"
include = ["src/**/*", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = { version = "0.4" }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
